Fixed logo on safari browser

--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -94,7 +94,6 @@ a.main-nav-item, button.main-nav-item  {
   min-width: max-content;
   & > img {
     height: calc(100% - 1em);
-    width: 100%;
   }
   &.right {
     margin-inline: 0.5em;
